<resources>
    <string name="app_name">TimeDAO</string>
    <string name="app_menu">메뉴</string>
    <string name="action_settings">Settings</string>
    <string name="network_error">네트워크 상태를 확인하세요.\n일부 기능이 실행되지 않을 수 있습니다.</string>
    <string name="network_error2">네트워크 상태로 인해 버전을 확인하지 못했습니다.</string>
    <string name="down_error">네트워크 상태로 인해 다운로드 실패했습니다.\n네트워크 상태 확인 후 재시도하세요.</string>
    <string name="downloding">Downloading Subject. Please wait...</string>
    <string name="e_learning">이러닝 혹은 시간정보가 없습니다</string>
    <string name="backpress">\'뒤로\'버튼을 한번 더 누르시면 종료됩니다.</string>
    <string name="time_error">데이터 형식에 오류가 있습니다.\n설정-문의하기를 통해 관리자에게 문의주세요.</string>
    <string name="year">년</string>
    <string name="month">월</string>
    <string name="week">주</string>
    <string name="day">일</string>
    <string name="hour">시</string>
    <string name="am">오전</string>
    <string name="pm">오후</string>
    <string name="prof">교수</string>
    <string name="credit">학점</string>
    <string name="classnum">분반</string>
    <string name="semester">학기</string>
    <string name="widget4_4">TimeDAO 4X4</string>
    <string name="widget5_5">TimeDAO 5X5</string>
    <string name="weekofmonth">째주</string>
    <string name="wait1">등록대기중</string>
    <string name="wait2">등록대기중입니다</string>
    <string name="QandA"><a href="https://open.kakao.com/o/sqXjIpf">소속 대학이 없는경우</a></string>
    <string name="QandA2">문의하기</string>
    <string name="permission_phonestate">사용자의 고유 아이디 생성을 위해\n폰 상태 권한이 필요합니다.</string>
    <string name="permission_contacts">친구 목록을 불러오기 위해\n연락처 접근 권한이 필요합니다.</string>
    <string name="permission_storage">시간표 저장을 위해\n저장소 접근 권한이 필요합니다.</string>
    <string name="permission_location">지도 검색을 위해\n위치 권한이 필요합니다.</string>
    <string name="permission_request">권한승인 요청</string>
    <string name="permission_deny">\n일부 기능이 동작하지 않을 수 있습니다.</string>
    <string name="timetable">시간표</string>
    <string name="friend">친구시간표</string>
    <string name="area">주변시간표</string>
    <string name="community">커뮤니티</string>
    <string name="setting">설정</string>
    <string name="normal_name">이름입력</string>
    <string name="normal_place">장소 : 직접입력</string>
    <string name="normal_alarm">알람 : 없음</string>
    <string name="normal_share">공유 : 비공개</string>
    <string name="normal_repeat">반복 : 없음</string>
    <string name="normal_memo">메모 : 없음</string>
    <string name="normal_search">검색</string>
    <string name="normal_i">비공개</string>
    <string name="normal_friend">친구공개</string>
    <string name="normal_all">전체공개</string>
    <string name="normal_empty">이름입력은 필수입니다.</string>
    <string name="normal_empty_time">시간 영역을 선택해주세요.</string>
    <string name="tvDialTime">시간설정</string>
    <string name="tvDialShare">공유설정</string>
    <string name="tvDialColor">색상변경</string>
    <string name="tvDialAlarm">알람설정</string>
    <string name="tvDialRepeat">반복설정</string>
    <string name="tvDialAddGroup">그룹추가</string>
    <string name="tvTextSize">글자크기</string>
    <string name="btDialCancel">취소</string>
    <string name="btDialSetting">확인</string>
    <string name="overlapEnroll">+ 일정추가</string>
    <string name="dialenroll_edit">일정수정</string>
    <string name="dialenroll_delete">일정삭제</string>
    <string name="dialenroll_single">이 일정만</string>
    <string name="dialenroll_all">연관된 일정 모두</string>
    <string name="update_title">업데이트 안내</string>
    <string name="update_content">업데이트 내역</string>
    <string name="update_notice">업데이트 버전이 있습니다.\n마켓으로 이동합니다.</string>
    <string name="search_place">장소 검색</string>
    <string name="search_notwork">GPS 기능을 사용할 수 없습니다.</string>
    <string name="share_radio0">비공개</string>
    <string name="share_radio1">친구공개</string>
    <string name="share_radio2">전체공개</string>
    <string name="alram_radio0">알람 없음</string>
    <string name="alram_radio1">정각</string>
    <string name="alram_radio2">10분 전</string>
    <string name="alram_radio3">20분 전</string>
    <string name="alram_radio4">30분 전</string>
    <string name="alram_radio5">1시간 전</string>
    <string name="alram_radio6">1일 전</string>
    <string name="day0">일</string>
    <string name="day1">월</string>
    <string name="day2">화</string>
    <string name="day3">수</string>
    <string name="day4">목</string>
    <string name="day5">금</string>
    <string name="day6">토</string>
    <string name="repeat_radio0">반복 없음</string>
    <string name="repeat_radio1">매주 반복</string>
    <string name="repeat_number">반복 횟수</string>
    <string name="term_month">개월</string>
    <string name="everyweek">주간격</string>
    <string name="everymonth">개월간격</string>
    <string name="everyyear">년간격</string>
    <string name="term">회</string>
    <string name="input_measure">단위를 입력하세요</string>
    <string name="repeat_term">반복기한은 5년 이하로 가능합니다</string>
    <string name="univ_dbupdate">데이터가 업데이트됩니다.</string>
    <string name="univ_search">대학을 검색하세요</string>
    <string name="univ_search_sub">강의 검색</string>
    <string name="univ_search_prof">교수명 검색</string>
    <string name="univ_searchdep">학과 검색</string>
    <string name="univ_select">대학 또는 과목을 선택하세요</string>
    <string name="univ_grade">학년 : 전체</string>
    <string name="univ_credit">학점 :</string>
    <string name="univ_overlap">중복되는 시간을 확인하세요</string>
    <string name="univ_notice_setting">대학은 설정 메뉴에서 재설정 가능합니다.</string>
    <string name="univ_notice_emtpy">정해진 시간이 없습니다</string>
    <string name="friend_favorite">즐겨찾기</string>
    <string name="friend_friend">친구</string>
    <string name="friend_group">그룹</string>
    <string name="friend_addgroup">+그룹</string>
    <string name="friend_search">친구 또는 그룹 검색</string>
    <string name="list_item_01">1km</string>
    <string name="list_item_02">5km</string>
    <string name="list_item_03">10km</string>
    <string name="community_search">커뮤니티 검색</string>
    <string name="setting_ver">버전정보</string>
    <string name="setting_time">시간표 설정</string>
    <string name="setting_group">그룹 설정</string>
    <string name="setting_init">초기화</string>
    <string name="setting_calendar">달력연동</string>
    <string name="setting_opensrc">오픈소스 정보</string>
    <string name="setting_group_in">소속그룹</string>
    <string name="setting_group_nothing">그룹이 없습니다</string>
    <string name="setting_group_modify">그룹이 설정되었습니다</string>
    <string name="setting_time_start">시작</string>
    <string name="setting_time_end">종료</string>
    <string name="setting_time_next">다음</string>
    <string name="setting_time_week">요일범위</string>
    <string name="setting_time_time">시간범위</string>
    <string name="setting_time_textsize">글자크기</string>
    <string name="setting_time_day_error">시작일과 종료일을 확인하세요</string>
    <string name="setting_time_time_error">시작시간과 종료시간을 확인하세요</string>
    <string name="setting_time_interval">시간 간격은 최대 15시간입니다</string>
    <string name="setting_ver_local">현재 버전</string>
    <string name="setting_ver_server">최신 버전</string>
    <string name="setting_ver_update">업데이트</string>
    <string name="setting_ver_equal">현재 최신 버전입니다.</string>
    <string name="setting_init_table_title">시간표 초기화</string>
    <string name="setting_init_table_content">모든 저장된 일정이 사라지며 복구가 불가능합니다.</string>
    <string name="setting_init_sub_title">과목 초기화</string>
    <string name="setting_init_sub_content">모든 저장된 과목 일정이 사라지며 학점이 초기화됩니다.</string>
    <string name="setting_init_credit_title">학점 초기화</string>
    <string name="setting_init_credit_content">학점이 초기화됩니다.</string>
    <string name="setting_init_q">초기화하시겠습니까?</string>
    <string name="setting_cal_holiday_ko">대한민국 공휴일</string>
    <string name="setting_cal_lunar">음력 - 15일 마다</string>
    <string name="setting_cal_24">24절기</string>
    <string name="setting_cal_sub">과목</string>
    <string name="setting_cal_repeat">매주 반복 일정</string>
    <string name="setting_opensrc_title">Open Source Notice | TimeDAO</string>
    <string name="setting_opensrc_intro">
        This application is Copyright © 2016 Daul Club. All Rights Reserved.\n\nThis application use Open Source Software.
        You can find the source code of these open source projects,
        along with applicable license information, below.
        We are deeply grateful to these developers for their work and contributions.
    </string>
    <string name="setting_opensrc_greendao_title">greenDAO</string>
    <string name="setting_opensrc_greendao_content">
    https://github.com/greenrobot/greenDAO\nCopyright © 2012-2016 Markus Junginger, greenrobot\nApache License 2.0</string>
    <string name="setting_opensrc_eventbus_title">EventBus</string>
    <string name="setting_opensrc_eventbus_content">
    https://github.com/greenrobot/EventBus\nCopyright © 2012-2016 Markus Junginger, greenrobot\nApache License 2.0</string>
    <string name="setting_opensrc_okhttp_title">OkHttp</string>
    <string name="setting_opensrc_okhttp_content">
    https://github.com/square/okhttp\nCopyright 2016 Square, Inc.\nApache License 2.0</string>
    <string name="setting_opensrc_joda_title">Joda Time</string>
    <string name="setting_opensrc_joda_content">
    https://github.com/JodaOrg/joda-time\nCopyright © 2002–2016 Joda.org\nApache License 2.0</string>
    <string name="setting_opensrc_volley_title">Volly Extensions</string>
    <string name="setting_opensrc_volley_content">
    https://github.com/naver/volley-extensions\nCopyright © 2014 Naver Corp.\nApache License 2.0</string>
    <string name="setting_opensrc_asl_title">Android-Support-Library</string>
    <string name="setting_opensrc_asl_content">
    https://github.com/android/platform_frameworks_supports\nCopyright © 2015 The Android Open Source Project\nApache License 2.0</string>
    <string name="setting_opensrc_firebase_title">Firebase Analytics</string>
    <string name="setting_opensrc_firebase_content">
    https://firebase.google.com/support/\nCopyright 2016 Google, Inc.\nApache License 2.0</string>
    <string name="setting_opensrc_apache_title">Apache License 2.0</string>
    <string name="amazon_activity_text">Amazon XML-format RSS Feed</string>
    <string name="github_activity_text">Github JSON-format User API</string>
    <string name="single_tap_zoom_network_image_view_activity_text">Single Tap Zoom NetworkImageView</string>
    <string name="double_tap_zoom_network_image_view_activity_text">Double Tap Zoom NetworkImageView</string>
</resources>