<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical" >
    <ExpandableListView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
</ExpandableListView>

    <Button
        android:id="@+id/github_activity_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/github_activity_text" />
    <Button
        android:id="@+id/amazon_activity_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/amazon_activity_text" />
    <Button
        android:id="@+id/single_tap_zoom_network_image_view_activity_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/single_tap_zoom_network_image_view_activity_text" />
    <Button
        android:id="@+id/double_tap_zoom_network_image_view_activity_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/double_tap_zoom_network_image_view_activity_text" />
</LinearLayout>
