<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_black_border"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/margin_xl"
        android:layout_weight="3"
        android:gravity="center_vertical"
        android:text="@string/tvDialAlarm"
        android:textSize="@dimen/textsize_l"
        android:textStyle="bold" />

    <RadioGroup
        android:id="@+id/alarmGroup"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:layout_marginLeft="@dimen/margin_l"
        >

        <RadioButton
            android:id="@+id/radio0"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/alram_radio0"
            android:textSize="@dimen/textsize_default"/>

        <RadioButton
            android:id="@+id/radio1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/alram_radio1"
            android:textSize="@dimen/textsize_default"/>
        <RadioButton
            android:id="@+id/radio2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/alram_radio2"
            android:textSize="@dimen/textsize_default"/>

        <RadioButton
            android:id="@+id/radio3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/alram_radio3"
            android:textSize="@dimen/textsize_default"/>
        <RadioButton
            android:id="@+id/radio4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/alram_radio4"
            android:textSize="@dimen/textsize_default"/>

        <RadioButton
            android:id="@+id/radio5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/alram_radio5"
            android:textSize="@dimen/textsize_default"/>
        <RadioButton
            android:id="@+id/radio6"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/alram_radio6"
            android:textSize="@dimen/textsize_default"/>
        <RadioButton
            android:id="@+id/radio7"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/alram_radio7"
            android:textSize="@dimen/textsize_default"/>
        <RadioButton
            android:id="@+id/radio8"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/alram_radio8"
            android:textSize="@dimen/textsize_default"/>
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="3"
        android:orientation="horizontal"
        android:layout_marginRight="@dimen/margin_default"
        android:layout_marginBottom="@dimen/margin_s"
        >

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2.5" />

        <Button
            android:id="@+id/btDialCancel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:background="@android:color/white"
            android:text="@string/btDialCancel"
            android:textColor="@android:color/black"
            android:textSize="@dimen/textsize_l"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btDialSetting"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:background="@android:color/white"
            android:text="@string/btDialSetting"
            android:textColor="@android:color/black"
            android:textSize="@dimen/textsize_l"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>