<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_lightgray_border"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dialog_bar"
        android:paddingLeft="@dimen/margin_xl"
        android:background="@color/maincolor"
        android:textColor="@android:color/white"
        android:gravity="center_vertical"
        android:text="@string/tvDialShare"
        android:textSize="@dimen/textsize_xxl"
        android:textStyle="bold" />

    <RadioGroup
        android:id="@+id/shareGroup"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:layout_marginLeft="@dimen/margin_l"
        >

        <RadioButton
            android:id="@+id/radio0"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/share_radio0"
            android:textSize="@dimen/textsize_default"/>

        <RadioButton
            android:id="@+id/radio1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/share_radio1"
            android:textSize="@dimen/textsize_default"/>
        <RadioButton
            android:id="@+id/radio2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/share_radio2"
            android:textSize="@dimen/textsize_default"/>
    </RadioGroup>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/lightgray" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dialog_bar"
        android:orientation="horizontal"
        >
        <Button
            android:id="@+id/btDialCancel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/bt_click"
            android:text="@string/btDialCancel"
            android:textColor="@android:color/black"
            android:textSize="@dimen/textsize_l"
            android:textStyle="bold" />
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/lightgray" />
        <Button
            android:id="@+id/btDialSetting"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/bt_click"
            android:text="@string/btDialSetting"
            android:textColor="@android:color/black"
            android:textSize="@dimen/textsize_l"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>