<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_black_border"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:paddingLeft="@dimen/margin_xl"
        android:background="@color/middlegray"
        android:textColor="@android:color/white"
        android:gravity="center_vertical"
        android:text="@string/tvDialAddGroup"
        android:textSize="@dimen/textsize_xxl"
        android:textStyle="bold" />

    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/lightgray" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        >
        <Button
            android:id="@+id/btDialCancel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/white"
            android:text="@string/btDialCancel"
            android:textColor="@android:color/black"
            android:textSize="@dimen/textsize_l"
            android:textStyle="bold" />
        <View
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:background="@color/lightgray" />
        <Button
            android:id="@+id/btDialSetting"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/white"
            android:text="@string/btDialSetting"
            android:textColor="@android:color/black"
            android:textSize="@dimen/textsize_l"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>