<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_black_border"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dialog_bar"
        android:paddingLeft="@dimen/margin_xl"
        android:background="@color/middlegray"
        android:textColor="@android:color/white"
        android:gravity="center_vertical"
        android:text="@string/setting_time_week"
        android:textSize="@dimen/textsize_xxl"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:layout_margin="@dimen/margin_l"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginBottom="@dimen/margin_l"
            android:orientation="horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:singleLine="true"
                android:layout_marginRight="@dimen/margin_xxxl"
                android:gravity="center_vertical"
                android:text="@string/setting_time_start"
                android:textSize="@dimen/textsize_xxxl"
                android:textStyle="bold" />
            <Spinner
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:id="@+id/sStartDay"
                android:scrollbars="none"/>
            </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:singleLine="true"
                android:gravity="center_vertical"
                android:layout_marginRight="@dimen/margin_xxxl"
                android:text="@string/setting_time_end"
                android:textSize="@dimen/textsize_xxxl"
                android:textStyle="bold" />
            <Spinner
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:id="@+id/sEndDay"
                android:scrollbars="none"/>
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/lightgray" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dialog_bar"
        android:orientation="horizontal"
        android:background="@drawable/bg_black_border_upper"
        >
        <Button
            android:id="@+id/btDialCancel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/bt_click"
            android:text="@string/btDialCancel"
            android:textColor="@android:color/black"
            android:textSize="@dimen/textsize_l"
            android:textStyle="bold" />
        <View
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:background="@color/lightgray" />
        <Button
            android:id="@+id/btDialSetting"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/bt_click"
            android:text="@string/btDialSetting"
            android:textColor="@android:color/black"
            android:textSize="@dimen/textsize_l"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>