<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@drawable/bg_lightgray_border"
android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dialog_bar"
        android:paddingLeft="@dimen/margin_xl"
        android:background="@color/maincolor"
        android:textColor="@android:color/white"
        android:gravity="center_vertical"
        android:text="@string/tvTextSize"
        android:textSize="@dimen/textsize_xxl"
        android:textStyle="bold" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingLeft="@dimen/margin_l"
            android:paddingRight="@dimen/margin_l"
            android:orientation="horizontal" >
            <TextView
                android:id="@+id/tvDialText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:textStyle="bold"
                android:singleLine="true"
                android:text="@string/setting_time_textsize"
                android:textSize="@dimen/margin_l"/>
            <NumberPicker
                android:id="@+id/npTextSize"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center"
                />
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/lightgray" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dialog_bar"
        android:orientation="horizontal"
        >
        <Button
            android:id="@+id/btDialCancel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/bt_click"
            android:text="@string/btDialCancel"
            android:textColor="@android:color/black"
            android:textSize="@dimen/textsize_l"
            android:textStyle="bold" />
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/lightgray" />
        <Button
            android:id="@+id/btDialSetting"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/bt_click"
            android:text="@string/btDialSetting"
            android:textColor="@android:color/black"
            android:textSize="@dimen/textsize_l"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>